<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.LoginActivity">

    <include layout="@layout/nav_bar" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginSize"
        android:src="@mipmap/ic_launcher" />

    <com.genius.smallmusic.ui.views.InputView
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputViewHeight"
        android:layout_marginTop="@dimen/marginSize"
        app:input_hint="@string/phone_number"
        app:input_icon="@mipmap/ic_launcher"
        app:is_password="false" />

    <View style="@style/line" />

    <com.genius.smallmusic.ui.views.InputView
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputViewHeight"
        android:layout_marginTop="@dimen/marginSize"
        app:input_hint="@string/password"
        app:input_icon="@mipmap/ic_launcher"
        app:is_password="true" />

    <View style="@style/line" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginSize"
        android:onClick="onRegisterClick"
        android:text="@string/immediately_register"
        android:textColor="@color/mainColor"
        android:textSize="@dimen/infoSize" />

    <Button
        style="@style/commitButton"
        android:layout_marginTop="@dimen/marginSize"
        android:onClick="onCommitClick"
        android:text="@string/btn_login" />

</LinearLayout>